# blutils

./: .cz.toml  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  TODO  TODO.md  publish-all.sh
.github/workflows/: rust.yml
adapters/proc/: CHANGELOG.md  Cargo.toml
adapters/proc/src/: execute_blast.rs  lib.rs
arc/drawio/: consensus-generation.drawio  parallel-blast.drawio
artifacts/mock/query/: matching.fna  unmatching.fna  valid.fna
artifacts/mock/ref_databases/: mock-16S.fna  mock-16S_taxonomies.tsv  subject.fna  subject.nhr  subject.nin  subject.nsq  taxonomy.tsv
assets/: custom-taxon-cutoffs-bacteria-16S.yaml
core/: CHANGELOG.md  Cargo.toml
core/src/: lib.rs  settings.rs
core/src/domain/: mod.rs
core/src/domain/dtos/: blast_builder.rs  blast_result.rs  blutils_output.rs  consensus_result.rs  consensus_strategy.rs  file_or_stdin.rs  linnaean_ranks.rs  mod.rs  parallel_blast_output.rs  taxon.rs  taxonomies_map.rs  taxonomy.rs  taxonomy_bean.rs
core/src/domain/entities/: execute_blastn.rs  execute_step.rs  mod.rs
core/src/domain/utils/: mod.rs
core/src/use_cases/: build_consensus_identities.rs  check_host_requirements.rs  filter_rank_by_identity.rs  mod.rs  run_blast_and_build_consensus.rs  run_parallel_blast.rs  write_blutils_output.rs
core/src/use_cases/build_blutils_db_from_ncbi_files/: build_accessions_map.rs  build_taxonomy_database.rs  load_del_nodes_dataframe.rs  load_lineage_dataframe.rs
core/src/use_cases/build_consensus_identities/: build_blast_consensus_identity.rs  find_multi_taxa_consensus.rs  find_single_query_consensus.rs  force_parsed_taxonomy.rs  get_rank_lowest_statistics.rs  mod.rs
core/src/use_cases/build_kraken_db_from_ncbi_files/: generate_fasta_file.rs  generate_taxonomies_file.rs  mod.rs
core/src/use_cases/build_qiime_db_from_blutils_db/: mod.rs
core/src/use_cases/build_ref_db_from_ncbi_files/: build_accessions_map.rs  build_fasta_database.rs  build_taxonomy_database.rs  load_del_nodes_dataframe.rs  load_dump_file.rs  load_lineage_dataframe.rs  load_merged_dataframe.rs  load_names_dataframe.rs  load_nodes_dataframe.rs  mod.rs
core/src/use_cases/parse_consensus_as_tabular/: mod.rs
core/src/use_cases/run_blast_and_build_consensus/: build_blast_consensus_identity.rs  build_consensus_identities.rs  check_host_requirements.rs  filter_rank_by_identity.rs  find_multi_taxa_consensus.rs  find_single_query_consensus.rs  force_parsed_taxonomy.rs  get_rank_lowest_statistics.rs  get_taxonomy_from_position.rs  mod.rs  run_parallel_blast.rs
core/src/use_cases/shared/: mod.rs  validate_blast_database.rs  write_file_or_stdout.rs  write_or_append_to_file.rs
docs/book/: 01_create_blutils_database.md  02_run_blast_and_generate_consensus_identities.md  03_blutils_online_viewer.md  README.md
docs/book/pipelines/: install_deps.sh  run_qc.sh
output/: blast.out
ports/cli/: CHANGELOG.md  Cargo.toml
ports/cli/src/: main.rs
ports/cli/src/cmds/: blast.rs  check.rs  db_builder.rs  mod.rs
ports/cli/src/cmds/blast/: commands.rs  mod.rs
ports/cli/src/cmds/db_builder/: commands.rs  mod.rs
ports/cli/src/models/: cli_launcher.rs  log_format.rs  mod.rs
src/: lib.rs  settings.rs
src/adapters/proc/: execute_step.rs  mod.rs
src/domain/dtos/: blast_builder.rs  blast_result.rs  mod.rs
src/ports/cli/: main.rs
src/ports/cli/cmds/: blast.rs  check.rs  mod.rs
src/use_cases/: build_consensus_identities.rs  filter_rank_by_identity.rs  mod.rs  run_blast_and_build_consensus.rs  run_parallel_blast.rs
test/mock/input/query/: query.fna
test/mock/input/ref_databases/: mock-16S.fna  mock-16S_taxonomies.tsv
test/mock/output/: blast.out  blutils.consensus.json
test/mock/output/blu-out-with-names/: blast.out  blutils.consensus.json
test/mock/output/zymo-mock/: blutils.consensus.json  data.tsv
