[package]
name = "blutils-core"
version = "3.0.1"
edition = "2021"
description = "A utility to make it easier to run and analyze Blast results"
license = "Apache-2.0"
authors = ["Samuel Galvão Elias <sgelias@outlook.com>"]
repository = "https://github.com/sgelias/blutils"
readme = "../README.md"
keywords = ["blast", "bioinformativs", "DNA", "similarity-analysis", "NCBI"]
categories = ["science", "command-line-interface", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clean-base = "1.0.1"
colored = "2.0.0"
const_format = "0.2.26"
env_logger = "0.10.0"
log = "0.4"
md5 = "0.7.0"
polars = "0.30"
polars-io = "0.30"
polars-lazy = "0.30"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subprocess = "0.2"

[lib]
name = "blul_core"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
