[package]

name = "blutils-core"
description = "A utility to make it easier to run and analyze Blast results"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

clap.workspace = true
mycelium-base.workspace = true
subprocess.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

colored = "2.0.0"
const_format = "0.2.26"
glob = "0.3.1"
md5 = "0.7.0"
polars = "0.37"
polars-core = "0.37"
polars-io = "0.37"
polars-lazy = "0.37"
polars-ops = "0.37"
rayon = "1.5"
shellexpand = "3.1.0"
slugify = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "fast-rng", "serde"] }


[lib]
name = "blul_core"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
