[package]

name = "blutils-proc-adapter"
version = "6.3.0"
description = "A utility to make it easier to run and analyze Blast results"

edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]

blutils-core.workspace = true
mycelium-base.workspace = true
subprocess.workspace = true


[lib]
name = "blul_proc"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
