[package]

name = "blutils-proc-adapter"
description = "A utility to make it easier to run and analyze Blast results"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]

mycelium-base.workspace = true
subprocess.workspace = true
blutils-core = { version = "7.1.2", path = "../../core" }


[lib]
name = "blul_proc"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
